--- a/article/cn/commenttest.html
+++ b/article/cn/commenttest.html
@@ -10,7 +10,7 @@
             --background-color: #ffffff;
             --text-color: #000000;
             --button-color: #757575;
-            --link-color: inherit; /* 添加链接颜色 */
+             --link-color: inherit; /* 添加链接颜色 */
             --border-color: #ccc; /* 添加边框颜色 */
         }
         @media (prefers-color-scheme: dark) {
@@ -18,7 +18,7 @@
                 --background-color: #121212;
                 --text-color: #ffffff;
                 --button-color: #9e9e9e;
-                  --link-color: #66b1ff;  /* 深色模式链接颜色 */
+                 --link-color: #66b1ff;  /* 深色模式链接颜色 */
                 --border-color: #444;  /* 深色模式边框颜色 */
 
             }
@@ -36,7 +36,7 @@
             margin: 0 auto;
             padding: 20px;
             box-sizing: border-box;
-            overflow: hidden;
+             overflow: hidden;
         }
         @media (max-width: 768px) {
             .container {
@@ -66,28 +66,31 @@
         .back-button:hover {
             background-color: #616161;
         }
-        a {
+         a {
             color: var(--link-color);
             text-decoration: none;
             border-bottom: 1px dotted var(--text-color);
             transition: border-color 0.3s;
         }
-
-      .copy-button {
+       .copy-button {
             display: inline-block;
             cursor: pointer;
             margin-left: 5px;
             font-size: 0.8em;
             vertical-align: super;
         }
-         /* 覆盖评论系统 iframe 的默认样式 */
-         #comments-container iframe {
-              width: 100%;
-               max-width: 65%; /* 保持和博客文章宽度一致 */
-              margin: 20px auto;
-              display: block; /* 让 iframe 居中 */
-              border: 1px solid var(--border-color);
-           }
+          #comments-container {
+             margin-top: 20px;
+            max-width: 65%;
+           margin: 20px auto;
+         }
+     .notification-bar {
+        position: fixed; bottom: 0; left: 0; width: 100%; background: var(--button-color); color: var(--background-color); padding: 10px 20px;
+          display: flex; align-items: center; justify-content: space-between; font-size: 14px; z-index: 9999;
+        }
+        .notification-bar.hidden { display: none; }
+        .close-btn { cursor: pointer; margin-left: 20px; font-weight: bold; }
+
     </style>
 </head>
 <body>
@@ -99,25 +102,30 @@
     </div>
     <button class="back-button" onclick="window.close()">返回</button>
    <div id="comments-container"></div>
+    <div id="notificationBar" class="notification-bar hidden">
+      <span id="notificationText"></span>
+      <span id="closeNotification" class="close-btn">×</span>
+    </div>
     <script>
-        const commentsContainer = document.getElementById('comments-container');
-        const iframe = document.createElement('iframe');
-        iframe.src = 'https://comment.joyance.page/embed/area/aaab';
-        iframe.style.width = '100%';
-        iframe.style.border = 'none';
-        iframe.onload = function() {
-           iframe.style.height = iframe.contentWindow.document.body.scrollHeight + 'px';
-        };
-        commentsContainer.appendChild(iframe);
-         // 监听 iframe 内容高度变化
-       setInterval(() => {
-        if (iframe.contentWindow) {
-          const newHeight = iframe.contentWindow.document.body.scrollHeight;
-          if (iframe.style.height !== newHeight + 'px') {
-            iframe.style.height = newHeight + 'px';
+          const notificationBar = document.getElementById('notificationBar');
+          const notificationText = document.getElementById('notificationText');
+          const closeNotification = document.getElementById('closeNotification');
+           closeNotification.addEventListener('click', () => notificationBar.classList.add('hidden'));
+          function showNotification(msg) {
+            notificationText.textContent = msg;
+            notificationBar.classList.remove('hidden');
           }
-        }
-       }, 200);
+
+      async function loadComments() {
+         const commentsContainer = document.getElementById('comments-container');
+           const res = await fetch('https://comment.joyance.page/embed/area/aaab');
+            if (!res.ok) {
+                commentsContainer.innerHTML = '评论加载失败';
+                return;
+           }
+         const html = await res.text();
+            commentsContainer.innerHTML = html;
+      }
 
 
         const article = { title: '开启我的个人博客', content: '这是我的第一个个人博客，没有买单独的域名，<e style="text-decoration: line-through;">功能也不齐全（换行的显示还不支持）</e>（2024/8/19 现已支持），而且文章是直接存在网页前端程序里<e style="text-decoration: line-through;">（太简陋了）</e>（2024/8/19 因为每个文章界面单独作为page页面，这个问题并不存在），但是目前应该够用了。 \n\n将来的打算是，这个平台作为我发布我文章的地方。<e style="text-decoration: line-through;">微信公众号和知乎我也会同步跟进。</e>（2024/8/19 现不打算同步更新） \n\n但是这个博客与公众号和知乎有什么不同的呢？ \n\n主要是他是我根据我的审美设计的 这样的平台虽然小了，但是却很符合我目前写文章的状态 \n\n也是我的上一次总结里说的，凭借自己的爱好 我是没有盈利的 \n\n当然还有一个原因，有可能其他的平台上我说话有些限制 \n\n在这里就可以发一些我不会在知乎上和公众号上发送的内容 \n\n当然有一些的来源是微信朋友圈 \n\n但是微信朋友圈也有审查（虽然我用的是WeChat账号） 而且传播范围也有限 \n\n所以，博客的计划就这样了 \n\n如果你的编程水平（特别是写网页的）不错 愿意帮我完善这个网站 你可以在"联系"那一栏找到我的微信号和邮箱 \n\n如果你只是单纯的阅读，那也别忘了加个收藏 不然以后就找不到了 （以后肯定会挂域名的，到时候另作通知 \n\n2024/7/26', pinned: true };
@@ -130,16 +138,17 @@
 
         function copyText(text) {
             navigator.clipboard.writeText(text).then(() => {
-                alert('文本已复制到剪贴板');
+                showNotification('文本已复制到剪贴板');
             }).catch(err => {
                 console.error('无法复制文本: ', err);
-            });
+           } );
         }
 
         function loadArticle() {
             document.title = article.title;
             document.getElementById('article-title').textContent = article.title;
             document.getElementById('article-content').innerHTML = processContent(article.content);
+             loadComments();
         }
 
         window.onload = loadArticle;
